Refactor tenant resource in presentation
